--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.13.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
     "jotai": "^2.2.2",
