--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-config-next": "13.4.7",
     "jotai": "^2.2.2",
     "jwt-decode": "^3.1.2",
+    "motion": "^12.34.3",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
